[V1] This is a official release Candidate 1 Version 1. Premium Membership System Added.

--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>RsPremiX</title>
+<title>Megzleech ~ Rapidshare Premium Link Generator ~</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="default.css" rel="stylesheet" type="text/css" />
 </head>
-<body onClick="fnCheck()">
 <script type="text/javascript" src="jquery-1.3.2.min.js"></script>
 <script type="text/javascript" src="timerscript.js">
 </script>
 <div id="header">
 	<div id="logo">
-		<h1><a href="Mediafire.net.tc">RsPremiX</a></h1>
+		<h1><a href="">MegzLeech</a></h1>
 	  <h2>Free Rapidshare Premium<br />
 		  Link Generator
 		</h2>
@@ -21,15 +20,16 @@
 	<div id="menu">
 		<ul>
 			<li class="first"><a href="index.html">Home</a></li>
-			<li><a href="#">donate</a></li>
-			<li><a href="#">help</a></li>
+			<li><a href="#">Donate</a></li>
+			<li><a href="logout.php">Logout</a></li>
+			<li><a href="checklogin.php">Login</a></li>
 		</ul>
 	</div>
 </div>
 <div id="content">
 	<div id="colOne">
 			<div class="story">
-<br /><em><strong>RsPremiX</strong></em>  allows users to generate premium rapidshare.com links for free. Highly secured and garanteed direct download from Rapidshare Premium.
+<br /><em><strong>MegzLeech</strong></em> allows users to generate premium rapidshare.com links for free. Highly secured and garanteed direct download from Rapidshare Premium.
 <br />
 <center><iframe src="adtop.htm" frameborder="no" scrolling="no" align="center"  height="60" width="234"></iframe></center>
 <center><iframe src="index.php" frameborder="no" scrolling="no" align="center"  height="100" width="430"></iframe></center>
@@ -43,7 +43,7 @@
   </div>
 </div>
 <div id="footer">
-	<p>Copyright &copy; 2007 RsPremiX.com</p>
+	<p>Copyright &copy; 2007 MegzLeech.com</p>
 </div>
 </body>
 </html>
